# flu.ke

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pa11yci  BACKUP.md  CHANGELOG.md  Dockerfile  Dockerfile.prod  LICENSE  MARCOLPHUS.md  POSTGRES.md  README.md  compose.prod.yaml  compose.yaml  deploy.sh  docker_setup.md  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  version-release.yml
apps/api/: serializers.py  urls.py  views.py
apps/blog/: admin.py  body_clean.py  links.py  models.py  og.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_seo_title.py  0003_post_related_artists_post_related_releases.py  0004_post_related_resources.py  0005_post_credit.py
apps/core/: admin.py  apps.py  cache.py  context_processors.py  models.py  og.py  seo.py  storage.py  text.py  views.py
apps/core/migrations/: 0001_site_configuration.py  0002_siteconfiguration_footer_tagline.py  0003_upload.py  0004_siteconfiguration_header_kicker_detail_and_more.py  0005_siteconfiguration_og_card_subtitle_and_more.py  0006_siteconfiguration_og_card_image.py
apps/core/templatetags/: content.py
apps/discography/: admin.py  apps.py  ingest.py  marcolphus_ingest.py  media_import.py  models.py  musicbrainz.py  musicbrainz_search.py  queries.py  sampler.py  storage.py
apps/discography/migrations/: 0001_initial.py  0002_alter_release_seo_title.py  0003_alter_track_sample.py  0004_lyric_slug.py  0005_artist_appears_on_homepage.py  0006_artist_lyric_seo_fields.py  0007_release_featured_artists.py  0008_release_additional_artists.py  0009_release_hide_artist_list.py  0010_remove_track_remixer_track_remixers.py  0011_artist_is_person.py  0012_edition_notes.py  0013_alter_edition_notes.py  0014_track_artist.py  0015_normalize_track_numbers.py
apps/discography/parsers/: lyrics.py  marcolphus.py  snapshot.py
apps/frontend/: feeds.py  sitemaps.py  urls.py  views.py
apps/frontend/templatetags/: editlinks.py
apps/importers/: apps.py  post_metadata.py  wayback.py
apps/pages/: admin.py  models.py
apps/pages/migrations/: 0001_initial.py  (+2 more)
apps/resources/: admin.py  forms.py  grouping.py  models.py  partial_date.py  storage.py
apps/staticgen/: admin.py  apps.py  feeds.py  models.py  renderer.py  routes.py  signals.py  sitemap.py
assets/css/: main.css  tokens.css
assets/fonts/: README.md
assets/js/: gallery.js  nav.js  scroll.js  theme.js
config/: settings.py  settings_production.py  urls.py
data/: post_metadata.json  wayback_posts.json
docker/: entrypoint.prod.sh  entrypoint.sh
docs/: deploy-docker.md  deploy-reclaim.md  mysql-migration.md
scripts/: deploy.sh  nginx-flu.ke.conf  scrape_wayback_posts.py
templates/: base.html  landing.html
templates/admin/: og_cache_change_form.html
templates/blog/: post_detail.html  post_list.html
templates/discography/: artist_detail.html  index.html  lyric_detail.html  lyric_index.html  release_detail.html
templates/pages/: page_detail.html
templates/partials/: og_meta.html  og_static.html
templates/resources/: _kind.html  resource_detail.html  resource_list.html
tests/: conftest.py  test_admin_og_cache.py  test_admin_post_buttons.py  test_api.py  test_api_hal_links.py  test_api_sections.py  test_artist_featured.py  test_audio_samples.py  test_blog_admin_actions.py  test_blog_links.py  test_blog_models.py  test_body_clean.py  test_build_site.py  test_buildstate.py  test_cache.py  test_clean_post_bodies_command.py  test_core_context.py  test_core_text.py  test_design_tokens_contrast.py  test_discography_import.py  test_discography_models.py  test_discography_queries.py  test_discography_schema.py  test_edition_copy_tracklist.py  test_edition_purchase_link.py  test_edition_summary.py  test_enrich_musicbrainz_command.py  test_favicon.py  test_feed.py  test_footer_api_link.py  test_frontend_edit_links.py  test_frontend_sitemap_feed.py  test_frontend_views.py  test_homepage_artist_links.py  test_import_blog.py  test_import_loose_archives.py  test_import_lyrics.py  test_jsonld_escaping.py  test_jsonld_xss_regression.py  test_lyric_parser.py  (+68 more)
tests/fixtures/: discography_snippet.html  lyric_page.html
(+40 files in other folders)
