[project]
name = "flukecms"
version = "1.0.0"
description = "Statically-generated fan site and Django CMS for the band Fluke (flu.ke)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-environ>=0.11",
    "pillow>=10.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "markdown>=3.6",
    "musicbrainzngs>=0.7.1",
    "requests>=2.32",
    "whitenoise>=6.6",
    "django-tinymce>=4.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "django-filter>=25.2",
]

[project.optional-dependencies]
# MySQL/MariaDB driver. NOT installed in the default (SQLite) environment — it
# needs system build headers (libmysqlclient-dev / default-libmysqlclient-dev)
# and is only used when DATABASE_URL points at MySQL. On the MySQL host install
# it with `uv sync --extra mysql`. See docs/mysql-migration.md.
mysql = ["mysqlclient>=2.2"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "responses>=0.25",
    "ruff>=0.6",
]

[tool.commitizen]
version = "1.0.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["Ingest", "dist", "media", ".venv", "**/migrations/*"]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
